[package]
name = "docs-raven-os-org"
version = "0.3.0"
authors = ["Benjamin Grange <benjamin.grange@epitech.eu>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = [ "handlebars_templates" ]}
lazy_static = "1.0"
regex = "0.2"
rust-crypto = "0.2.36"
serde = "1.0"
serde_json = "1.0"
